fix spacing in certificates

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -209,7 +209,7 @@ p {
         color: $text-grey;
     }
     .company-certificate {
-        margin-bottom: 2px;
+        margin-bottom: 10px;
         color: $text-grey;
     }
     .project-title {
